[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/InteractiveObjects/Coin/Piece_SpriteSheet.png" type="Texture" id=1]
[ext_resource path="res://Scenes/InteractiveObjects/Coin/Coin.gd" type="Script" id=2]
[ext_resource path="res://Scenes/InteractiveObjects/Coin/Validation.ogg" type="AudioStream" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 93, 83, 93 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 83, 93, 83, 93 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 166, 93, 83, 93 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 249, 93, 83, 93 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 332, 93, 83, 93 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 415, 93, 83, 93 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ SubResource( 1 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "Rotation",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=9]
radius = 14.0

[sub_resource type="Gradient" id=10]
colors = PoolColorArray( 0.847656, 0.774811, 0, 1, 1, 0.337255, 0.0117647, 0.392157 )

[node name="Coin" type="Node2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )

[node name="CoinSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.15, 0.15 )
frames = SubResource( 8 )
animation = "Rotation"
offset = Vector2( -3, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D" type="Area2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 9 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 40
lifetime = 0.2
one_shot = true
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector2( 0, -1 )
gravity = Vector2( 0, 150 )
initial_velocity = 75.0
color_ramp = SubResource( 10 )
__meta__ = {
"_edit_lock_": true
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="animation_finished" from="CoinSprite" to="." method="_on_CoinSprite_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
